[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
litesvm = "0.6.1"
solana-message = "2.2.0"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.0"
solana-pubkey = "2.2.0"
solana-keypair = "2.2.0"
solana-signer = "2.2.0"
steel-amm-api.workspace = true